custom-hierarchy-cmp/force-app/main/default/objects/Custom_Hierarchy_Setting__mdt/Custom_Hierarchy_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Custom Hierarchy Setting</label>
    <pluralLabel>Custom Hierarchy Settings</pluralLabel>
</CustomObject>