custom-hierarchy-cmp/force-app/main/default/objects/Custom_Hierarchy_Setting__mdt/fields/fieldName__c.field-meta.xml
<CustomField>
    <fullName>fieldName__c</fullName>
    <label>fieldName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>