custom-hierarchy-cmp/force-app/main/default/objects/Custom_Hierarchy_Setting__mdt/fields/label__c.field-meta.xml
<CustomField>
    <fullName>label__c</fullName>
    <label>label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>